[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openwright-conformance"
version = "0.4.0"
description = "Shared conformance harness for OpenWright connectors (dev/test only)."
requires-python = ">=3.10,<3.15"
license = { text = "Apache-2.0" }
dependencies = ["openwright-core>=0.6,<0.8"]

[tool.hatch.build.targets.wheel]
packages = ["openwright_conformance"]
